--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .idea/
 .idea_modules/
 
+# any big video files from an iphone
+*.mov
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
